# concurency-katas

./: README.md
elx_otp/: README.md
elx_otp/lib/: crawler.ex  downloader.ex  indexer.ex  request.ex  result.ex  worker.ex
elx_otp/test/: crawler_test.exs
elx_pmap/: README.md
elx_pmap/lib/: crawler.ex  indexer.ex  pmap.ex  request.ex
elx_pmap/test/: crawler_test.exs
elx_queue/: README.md  mix.exs
elx_queue/lib/: crawler.ex  downloader.ex  request.ex  worker.ex
elx_queue/test/: crawler_test.exs
erl_actor/: README.md
erl_actor/src/: downloader.erl  erlcrawler.app.src  erlcrawler.erl  erlcrawler_test.erl
erl_otp/: LICENSE  README.md  rebar.config  run.sh
erl_otp/src/: erlcrawler.app.src  erlcrawler_app.erl  erlcrawler_serv.erl  erlcrawler_stats.erl  erlcrawler_sup.erl  erlcrawler_sup_sup.erl  erlcrawler_worker.erl  erlcrawler_worker_sup.erl
erl_pmap/: README.md
erl_pmap/src/: erlcrawler.erl  erlcrawler_test.erl  indexer.erl  pmap.erl
go_pool/: README.md  crawler.go  crawler_test.go  go.mod  test.sh
go_pool/async/: async.go  async_await.go  async_await_test.go  async_polling.go  async_polling_test.go  async_racer.go  async_racer_test.go  async_watchdog.go  async_watchdog_test.go  task.go  task_test.go
go_pool/cmd/: main.go
go_pool/domain/: domain.go
go_pool/pool/: pool.go  pool_test.go
go_pool/queue/: queue.go
kot_pool/: settings.gradle
node/: package-lock.json  package.json  test.sh  tsconfig.json
node/src/: index.ts
rust_async/: Cargo.toml  README.md  domain.bak
rust_async/src/: main.rs
rust_async/src/crawler/: crawler.rs
(+20 files in other folders)
