[package]
name = "rust_async"
version = "0.1.0"
authors = ["Shahzad Bhatti <bhatti@plexobject.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
futures = "0.3.1"
#tokio = {version = "0.2.*", features = ["full"] }
async-std = { version = "1.2", features = ["attributes"] }
